# n-queens

./: README.md  SPEC.md  pyproject.toml
n_queens/: __init__.py  core.py
order_totals/: __init__.py  core.py
tests/integration/: test_n_queens_integration.py  test_order_totals_integration.py
tests/unit/: test_n_queens.py  test_order_totals.py
